<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bluebackground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:contentDescription="@string/background_image" />

    <TextView
        android:id="@+id/header"
        android:layout_width="325dp"
        android:layout_height="82dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="131dp"
        android:gravity="center"
        android:text="@string/question_goes_here"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/input_value_edit_text"
        style="@style/HintTextSize"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/type_here"
        android:inputType="number"
        android:maxLength="8"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.499"
        android:autofillHints="Text" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="85dp"
        android:layout_height="49dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_edit_text"
        app:layout_constraintVertical_bias="0.658" />

    <FrameLayout
        android:id="@+id/bottom_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/background_image" />

        <ImageButton
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:contentDescription="@string/forward_button" />
    </FrameLayout>

    <ImageView
        android:id="@+id/info_icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_edit_text"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/ic_baseline_info_24"
        android:contentDescription="@string/info_icon" />

    <TextView
            android:id="@+id/question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionX_outOf_X"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_image" />

</androidx.constraintlayout.widget.ConstraintLayout>