<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GuestLoginScreen">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bluebackground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/question_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="425dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="131dp"
        android:gravity="center"
        android:text="@string/lets_get_started"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toStartOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-500dp"
        android:gravity="center"
        android:text="@string/instructions"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="411dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/question_apply"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toStartOf="@+id/background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <!--        android:gravity="center"-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="400dp"
        android:layout_marginBottom="78dp"
        android:text="@string/leave_it_to_us"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/background_image"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="410dp"
        android:layout_marginBottom="275dp"
        android:text="@string/begin"
        app:layout_constraintBottom_toTopOf="@+id/bottom_frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/background_image"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <FrameLayout
        android:id="@+id/bottom_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <ImageButton
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

    </FrameLayout>

    <!--    <TableRow-->
<!--        android:id="@+id/tableRow1"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="636dp">-->

<!--        <ImageView-->
<!--            android:id="@+id/img1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="40dp"-->
<!--            android:src="@drawable/ic_baseline_arrow_back_24"-->
<!--            android:text="Button 1" />-->

<!--        <ImageView-->
<!--            android:id="@+id/img2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/ic_baseline_arrow_forward_24"-->
<!--            android:text="Button 2" />-->
<!--    </TableRow>-->

</androidx.constraintlayout.widget.ConstraintLayout>